--- a/exhibit/src/index.css
+++ b/exhibit/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'IMFellDWPica', serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -13,6 +13,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --font-lovers: 'LoversQuarrel';
 }
 
 a {
