--- a/exhibit/src/index.css
+++ b/exhibit/src/index.css
@@ -19,12 +19,10 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
+  color: black;
 }
-a:hover {
-  color: #535bf2;
-}
+
 
 body {
   margin: 0;
